--- a/src/styles/StockSearchControls.css
+++ b/src/styles/StockSearchControls.css
@@ -1,21 +1,25 @@
 .StockSearchControls {
-  display: flex; 
-  align-items: center; 
-  justify-content: flex-start; 
-  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* padding: 20px; */
+  /* width: 250px; */
+  gap: 10px;
+  background-color: #f7f7f7;
 }
 
 .StockSearchControls input[type="text"],
 .StockSearchControls input[type="date"] {
-  padding: 10px;
-  border: 1px solid #e0e0e0;
+  /* padding: 10px; */
+  /* font-size: 10px; */
+  border: 1px solid #1d9ed1;
   border-radius: 5px;
-  width: 20%; 
+  width: 80%; 
   margin-bottom: 10px; 
 }
 
 .StockSearchControls button {
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   background-color: #282c34;
   color: white;
   border: none;
@@ -29,24 +33,7 @@
   background-color: #1f242a;
 }
 
-.StockSearchControls > * {
-  margin-right: 10px; 
-}
-
-.StockSearchControls > *:last-child {
-  margin-right: 0;
-}
-
-.inputGroup {
+.dateInputs {
   display: flex;
-  align-items: center;
-  margin-right: 20px;  
-}
-
-.inputGroup label {
-  margin-right: 10px;  
-}
-
-.StockSearchControls {
-  background-color: #f7f7f7;
+  gap: 10%;
 }
